@@ -1,3 +1,6 @@
+20080707
+	update emu/port/win-x11a.c (fix someone's earlier patch to stop using undefined value)
+	emu/port/main.c mark obsolete options and remove from usage
 20080705
 	update utils/sed, eliminating anonymous unions (just by commenting them out, to keep source in step with 9)
 		and several other changes for portability
